some spacing fixes

--- a/src/sass/blocks/_hero.scss
+++ b/src/sass/blocks/_hero.scss
@@ -60,7 +60,7 @@
       @media only screen and (min-width: 768px) {
         max-width: 60px;
       }
-      max-width: 40px;
+      max-width: 30px;
 
       width: 100%;
       height: auto;
@@ -93,7 +93,7 @@
         &:nth-child(3) {
         }
         &:nth-child(4) {
-          top: 40px;
+          top: 30px;
         }
         &:nth-child(5) {
           display: none;
