--- a/src/sass/blocks/_pricing.scss
+++ b/src/sass/blocks/_pricing.scss
@@ -5,7 +5,7 @@
     margin-bottom: 120px;
   }
   padding-top: 0;
-  margin-bottom: 80px;
+  // margin-bottom: 80px;
 
   .team-toggle-container,
   .team-toggle-container-new {
