--- a/src/sass/blocks/_tested.scss
+++ b/src/sass/blocks/_tested.scss
@@ -83,7 +83,7 @@
       margin-top: 12px;
       a {
         transition: all 0.4s ease-out;
-        @media only screen and (min-width: 768) {
+        @media only screen and (min-width: 768px) {
           &:hover {
             cursor: pointer;
             span {
